adding links to youtube

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -17,6 +17,12 @@
 .name {
   color: aliceblue;
 }
+a {
+  display: block;
+}
+a:hover {
+  cursor: pointer;
+}
 .titles {
   font-size: 1rem;
   color: aliceblue;
